--- a/index.html
+++ b/index.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<body lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>itslxmns</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    
+</body>
+    <header>
+        <h1>itslxmns</h1>
+        <p>-</p>
+        <nav>
+            <a href="#about">Обо мне</a>
+            <a href="#skills">Навыки</a>
+            <a href="#contacts">Контакты</a>
+        </nav>
+    </header>
+    <main>
+        <section id="about">
+            <h2>Обо мне</h2>
+            <p>Скоро здесь будет краткая информация обо мне.</p>
+        </section>
+        <section id="skills">
+            <h2>Навыки</h2>
+            <p>Скоро здесь будут перечислены мои ключевые навыки.</p>
+        </section>
+        <section id="contacts">
+            <h2>Контакты</h2>
+            <p>Скоро здесь появятся способы связи со мной.</p>
+        </section>
+    </main>
 </body>
 </html>
