--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </body>
     <header>
         <h1>itslxmns</h1>
-        <p>-</p>
         <nav>
             <a href="#about">Обо мне</a>
             <a href="#skills">Навыки</a>
@@ -19,15 +18,15 @@
     <main>
         <section id="about">
             <h2>Обо мне</h2>
-            <p>Скоро здесь будет краткая информация обо мне.</p>
+            <p>Itslxmns, .</p>
         </section>
         <section id="skills">
             <h2>Навыки</h2>
-            <p>Скоро здесь будут перечислены мои ключевые навыки.</p>
+            <p>Visual studio code, Blender, Photoshop, Premier Pro, Roblox Studio, Discord Bots, Lua, Python, JavaScript, TypeScript, SQLite, React, HTML, CSS.</p>
         </section>
         <section id="contacts">
             <h2>Контакты</h2>
-            <p>Скоро здесь появятся способы связи со мной.</p>
+            <p><a href=https://t.me/lxmnsdev>Telegram</a></p>
         </section>
     </main>
 </body>
