--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>itslxmns</title>
+    <title>Itslxmns, Dmitriy</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 </body>
@@ -26,7 +26,7 @@
         </section>
         <section id="contacts">
             <h2>Контакты</h2>
-            <p><a href=https://t.me/lxmnsdev>Telegram</a></p>
+            <a href="https://t.me/lxmnsdev"> <img src="Files/TelegramLogo.webp" alt="Telegram" width="32" height="32"></a>
         </section>
     </main>
 </body>
