--- a/index.html
+++ b/index.html
@@ -3,29 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Itslxmns, Dmitriy</title>
+    <title>Itslxmns</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 </body>
     <header>
-        <h1>itslxmns</h1>
+        <h1>Itslxmns</h1>
         <nav>
-            <a href="#about">Обо мне</a>
-            <a href="#skills">Навыки</a>
-            <a href="#contacts">Контакты</a>
+            <a href="#about">About Me</a>
+            <a href="#skills">Skills</a>
+            <a href="#contacts">Contact Me</a>
         </nav>
     </header>
     <main>
         <section id="about">
-            <h2>Обо мне</h2>
-            <p>Itslxmns, .</p>
+            <h2>About Me</h2>
+            <p>Itslxmns, Dmitriy.</p>
         </section>
         <section id="skills">
-            <h2>Навыки</h2>
+            <h2>Skills</h2>
             <p>Visual studio code, Blender, Photoshop, Premier Pro, Roblox Studio, Discord Bots, Lua, Python, JavaScript, TypeScript, SQLite, React, HTML, CSS.</p>
         </section>
         <section id="contacts">
-            <h2>Контакты</h2>
+            <h2>Contact Me</h2>
             <a href="https://t.me/lxmnsdev"> <img src="Files/TelegramLogo.webp" alt="Telegram" width="32" height="32"></a>
         </section>
     </main>
