--- a/index.html
+++ b/index.html
@@ -1,33 +1,74 @@
 <!DOCTYPE html>
-<body lang="ru">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Itslxmns</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="Files/favicon.png" type="image/png">
+    <script src="script.js" defer></script>
 </head>
-</body>
-    <header>
-        <h1>Itslxmns</h1>
-        <nav>
-            <a href="#about">About Me</a>
-            <a href="#skills">Skills</a>
-            <a href="#contacts">Contact Me</a>
-        </nav>
+<body>
+    <div class="background-blur"></div>
+    <div class="glass-orb orb-1"></div>
+    <div class="glass-orb orb-2"></div>
+    <div class="glass-orb orb-3"></div>
+    
+    <div class="scroll-progress"></div>
+    
+    <header class="glass-header">
+        <div class="header-content">
+            <h1 class="glitch" data-text="Itslxmns">Itslxmns</h1>
+            <nav>
+                <a href="#about" class="nav-link">About Me</a>
+                <a href="#skills" class="nav-link">Skills</a>
+                <a href="#contacts" class="nav-link">Contact Me</a>
+            </nav>
+        </div>
     </header>
+
     <main>
-        <section id="about">
-            <h2>About Me</h2>
-            <p>Itslxmns, Dmitriy.</p>
+        <section id="about" class="glass-section fade-in">
+            <div class="section-content">
+                <h2>About Me</h2>
+                <p>Itslxmns, Dmitriy.</p>
+            </div>
         </section>
-        <section id="skills">
-            <h2>Skills</h2>
-            <p>Visual studio code, Blender, Photoshop, Premier Pro, Roblox Studio, Discord Bots, Lua, Python, JavaScript, TypeScript, SQLite, React, HTML, CSS.</p>
+
+        <section id="skills" class="glass-section fade-in">
+            <div class="section-content">
+                <h2>Skills</h2>
+                <div class="skills-grid">
+                    <span class="skill-tag">Visual Studio Code</span>
+                    <span class="skill-tag">Blender</span>
+                    <span class="skill-tag">Photoshop</span>
+                    <span class="skill-tag">Premier Pro</span>
+                    <span class="skill-tag">Roblox Studio</span>
+                    <span class="skill-tag">Discord Bots</span>
+                    <span class="skill-tag">Lua</span>
+                    <span class="skill-tag">Python</span>
+                    <span class="skill-tag">JavaScript</span>
+                    <span class="skill-tag">TypeScript</span>
+                    <span class="skill-tag">SQLite</span>
+                    <span class="skill-tag">React</span>
+                    <span class="skill-tag">HTML</span>
+                    <span class="skill-tag">CSS</span>
+                </div>
+            </div>
         </section>
-        <section id="contacts">
-            <h2>Contact Me</h2>
-            <a href="https://t.me/lxmnsdev"> <img src="Files/TelegramLogo.webp" alt="Telegram" width="32" height="32"></a>
+
+        <section id="contacts" class="glass-section fade-in">
+            <div class="section-content">
+                <h2>Contact Me</h2>
+                <div class="contact-links">
+                    <a href="https://t.me/lxmnsdev" class="contact-btn">
+                        <img src="Files/TelegramLogo.webp" alt="Telegram">
+                        <span>Telegram</span>
+                    </a>
+                </div>
+            </div>
         </section>
     </main>
+
 </body>
 </html>
